api/src/main/java/com/example/api/error/exception/EntityRequiredAttributeNullException.java
package com.example.api.error.exception;

public class EntityRequiredAttributeNullException extends Exception{

    public EntityRequiredAttributeNullException(String message) {
        super(message);
    }
}
